presence-service/src/main/java/com/example/presence_service/error/BaseErrorCode.java
package com.example.presence_service.error;

import org.springframework.http.HttpStatus;

public interface BaseErrorCode {
    int getCode();
    String getMessage();
    HttpStatus getHttpStatus();
}
